--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body header nav {
   font-size: 1.5rem;
 
   border-bottom: 4px inset #b1b1b1;
-  background-color: red;
+  background-color: white;
 
 }
 
