--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body header section {
   min-height: 37.5rem;
   width: 100vw;
     
-  background-image: url("https://wallpaper-house.com/data/out/8/wallpaper2you_207224.jpg");
+  background-image: url("https://img.freepik.com/premium-photo/laptop-with-blank-screen-white-table-grey-background-modern-laptop-mockup-wide-web-banner-copy-space_256259-3545.jpg?w=1060");
   background-size: cover;
   background-position: 75% 0%;
 }
