--- a/style.css
+++ b/style.css
@@ -62,8 +62,8 @@ body header section {
   width: 100vw;
     
   background-image: url("https://img.freepik.com/premium-photo/laptop-with-blank-screen-white-table-grey-background-modern-laptop-mockup-wide-web-banner-copy-space_256259-3545.jpg?w=1060");
-  background-size: 100% 100%;
-  background-position: 85% 0%;
+  background-size: cover;
+  background-position: 85% 15%;
 }
 
 body header section article {
